✨🤩🚩GOT ISSUE GRID: add align-content: center; in ROW❗

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ body {
     height: 100%;
     justify-content: center;
     overflow-y: auto;
+    align-content: center;
 }
 
 .col4 {
